--- a/seccion_3/pubspec.yaml
+++ b/seccion_3/pubspec.yaml
@@ -32,17 +32,22 @@ dependencies:
     sdk: flutter
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  firebase_core: ^2.12.0
+  firebase_auth: ^4.6.0
+  google_sign_in: ^6.1.0
+  firebase_database: ^10.2.0
+  flutter_signin_button: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.4
   hive_generator: ^2.0.0
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
